--- a/index.html
+++ b/index.html
@@ -269,10 +269,10 @@
         }
         .modal-overlay.active { opacity: 1; pointer-events: auto; }
         .modal-content {
-            background: white; width: 90%; max-width: 360px;
-            border-radius: 24px; padding: 24px;
+            background: white; width: 95%; max-width: 400px;
+            border-radius: 24px; padding: 20px;
             transform: translateY(20px); transition: transform 0.3s;
-            max-height: 80vh; overflow-y: auto;
+            max-height: 85vh; overflow-y: auto;
         }
         .modal-overlay.active .modal-content { transform: translateY(0); }
         
@@ -847,8 +847,8 @@
                 // ↓↓↓ 請在這裡替換成您的 GitHub 圖片連結 ↓↓↓
                 // 例如: 'https://raw.githubusercontent.com/您的帳號/repo/main/images/Klook_voucher.jpg'
                 voucherImages: [
-                    'https://github.com/asdfzxcv0911/-Jeju/blob/main/Aqua%20Planet1.png',
-                    'https://github.com/asdfzxcv0911/-Jeju/blob/main/Aqua%20Planet2.png'
+                    'Aqua Planet1.png',
+                    'Aqua Planet2.png'
                 ]
             },
             'WNF147844': {
