--- a/index.html
+++ b/index.html
@@ -278,16 +278,24 @@
             const checkInUrl = "https://sci.tigerairtw.com/zh-TW/login";
             return `
                 <div class="mb-4 space-y-2">
+                    <!-- Z4WW7F Booking (新增登機證按鈕) -->
                     <div class="bg-white p-2 rounded-lg border-2 border-dashed border-slate-200 flex justify-between items-center relative overflow-hidden">
                          <div class="absolute right-0 top-0 text-6xl opacity-5 rotate-12 select-none"><i class="fas fa-ticket-alt"></i></div>
                          <div class="z-10">
                             <div class="text-[10px] text-slate-400 font-bold mb-0.5"><i class="fas fa-user-tag mr-1"></i>LI,I-KUN</div>
                             <div class="text-xl font-black text-jeju-orange font-hand tracking-widest leading-none">Z4WW7F</div>
                          </div>
-                         <a href="${checkInUrl}" target="_blank" class="z-10 bg-jeju-orange text-white text-xs px-3 py-2 rounded-lg font-bold shadow-sm hover:bg-orange-500 transition-transform active:scale-95 flex items-center">
-                            <i class="fas fa-passport mr-1"></i> 自助報到
-                         </a>
+                         <div class="z-10 flex flex-col gap-1.5">
+                             <a href="${checkInUrl}" target="_blank" class="bg-jeju-orange text-white text-[10px] px-3 py-1.5 rounded-md font-bold shadow-sm hover:bg-orange-500 transition-transform active:scale-95 flex items-center justify-center min-w-[85px]">
+                                <i class="fas fa-passport mr-1"></i> 自助報到
+                             </a>
+                             <button onclick="showBoardingPassZ4WW7F()" class="bg-slate-600 text-white text-[10px] px-3 py-1.5 rounded-md font-bold shadow-sm hover:bg-slate-700 transition-transform active:scale-95 flex items-center justify-center min-w-[85px]">
+                                <i class="fas fa-qrcode mr-1"></i> 登機證
+                             </button>
+                         </div>
                     </div>
+                    
+                    <!-- M5NCRC Booking -->
                     <div class="bg-white p-2 rounded-lg border-2 border-dashed border-slate-200 flex justify-between items-center relative overflow-hidden">
                          <div class="absolute right-0 top-0 text-6xl opacity-5 rotate-12 select-none"><i class="fas fa-ticket-alt"></i></div>
                          <div class="z-10">
@@ -300,6 +308,47 @@
                     </div>
                 </div>
             `;
+        }
+
+        // 新增：顯示 Z4WW7F 登機證
+        window.showBoardingPassZ4WW7F = function() {
+            document.getElementById('modal-content-area').innerHTML = `
+                <div class="text-left relative h-full">
+                    <div class="absolute -top-4 -right-2 text-5xl opacity-20 rotate-12 text-slate-600"><i class="fas fa-ticket-alt"></i></div>
+                    <h3 class="text-xl font-bold text-slate-800 mb-4 text-center border-b-2 border-slate-300 pb-3 font-hand tracking-wide">
+                        ✈️ 登機證 (Z4WW7F)
+                    </h3>
+
+                    <div class="space-y-4">
+                         <!-- Boarding Pass Images -->
+                         <div class="p-2 grid grid-cols-1 gap-4">
+                             ${['BoardingPass_1.jpg', 'BoardingPass_2.jpg'].map((img, i) => `
+                                <div class="rounded-lg overflow-hidden border-2 border-slate-200 shadow-sm relative cursor-pointer group"
+                                     onclick="window.open('${img}', '_blank')">
+                                    <img src="${img}" 
+                                         onerror="this.src='https://placehold.co/600x300?text=Boarding+Pass+${i+1}';" 
+                                         class="w-full h-auto object-cover group-hover:opacity-90 transition-opacity">
+                                    <div class="absolute bottom-2 right-2 bg-black/60 text-white text-[10px] px-2 py-1 rounded backdrop-blur-sm">
+                                        <i class="fas fa-search-plus mr-1"></i> 點擊放大
+                                    </div>
+                                </div>
+                            `).join('')}
+                        </div>
+                        
+                        <div class="text-xs text-slate-500 text-center bg-slate-50 p-2 rounded-lg">
+                             <i class="fas fa-info-circle mr-1"></i>請將登機證截圖命名為<br>
+                             <span class="font-mono bg-white px-1 rounded border border-slate-200">BoardingPass_1.jpg</span> 與 
+                             <span class="font-mono bg-white px-1 rounded border border-slate-200">BoardingPass_2.jpg</span><br>
+                             並放入同資料夾
+                        </div>
+                    </div>
+
+                    <div class="mt-6">
+                        <button onclick="closeModal()" class="w-full bg-slate-700 text-white py-3 rounded-xl font-bold text-sm shadow-lg active:scale-95 transition">關閉</button>
+                    </div>
+                </div>
+            `;
+            document.getElementById('info-modal').classList.remove('hidden');
         }
 
         // 渲染乘客表格
